# libReflection

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  build  configure.ac  libReflection.pc.in  proj_init.sh  vim.vim
include/: Reflection.hpp
include/Reflection/: Class.hpp  Function.hpp  Main.hpp  Namespace.hpp  StackTrace.hpp  Template.hpp  Type.hpp
src/: Function.cpp  StackTrace.cpp  Type.cpp  dwarf_dump  dwarf_dump.cpp
