AC_PREREQ([2.69])
AC_INIT([libReflection], [0.0], [mustrumr97@gmail.com])
AC_CONFIG_SRCDIR([src/Type.cpp])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([build-aux])
AC_CONFIG_FILES([Makefile])
AM_INIT_AUTOMAKE([subdir-objects])
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
LT_PREREQ([2.4])
LT_INIT

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP

AC_OUTPUT
